// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders casey 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
      },
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#ffffff",
          "fontSize": 24,
        },
      ]
    }
  >
    BEN
  </Text>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits="button"
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 0,
            "borderWidth": 0,
            "height": 60,
            "justifyContent": "center",
            "margin": 0,
            "paddingHorizontal": 20,
            "paddingVertical": 10,
          },
          null,
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderRadius": 50,
              "justifyContent": "center",
              "marginRight": 10,
              "paddingHorizontal": 15,
              "paddingVertical": 5,
            },
            null,
            Object {
              "backgroundColor": "#FF5532",
              "height": 36,
              "margin": 10,
              "marginBottom": 5,
            },
          ],
          null,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "backgroundColor": "rgba(0,0,0,0)",
                "color": "#ffffff",
                "fontSize": 18,
                "fontWeight": "500",
                "letterSpacing": 1.5,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#007398",
                },
                null,
                Object {
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "bold",
                },
              ],
            ],
          ]
        }
      >
        SELECT STAGE
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignSelf": "stretch",
          "flex": 1,
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "height": 50,
              "marginVertical": 10,
            },
            undefined,
          ]
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingBottom": 0,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 32,
                  },
                  Object {
                    "color": "rgba(255,255,255,1)",
                  },
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontSize": 11,
                    "paddingTop": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255,1)",
                  },
                ],
              ]
            }
          >
            My Steps
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingBottom": 0,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 32,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontSize": 11,
                    "paddingTop": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
              ]
            }
          >
            Our Journey
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingBottom": 0,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 32,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontSize": 11,
                    "paddingTop": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
              ]
            }
          >
            My Notes
          </Text>
        </View>
      </View>
      <RCTScrollView
        alwaysBounceVertical={false}
        automaticallyAdjustContentInsets={false}
        collapsable={undefined}
        contentOffset={
          Object {
            "x": 0,
          }
        }
        directionalLockEnabled={true}
        horizontal={true}
        keyboardDismissMode="on-drag"
        keyboardShouldPersistTaps="handled"
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        pagingEnabled={true}
        scrollEnabled={false}
        scrollEventThrottle={16}
        scrollsToTop={false}
        showsHorizontalScrollIndicator={false}
      >
        <View>
          <View
            style={
              Object {
                "width": 750,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "white",
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#ffffff",
                        "flex": 1,
                      },
                      Object {
                        "alignItems": "center",
                        "flex": 1,
                        "justifyContent": "center",
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {},
                        Object {
                          "alignItems": "center",
                          "justifyContent": "center",
                        },
                      ]
                    }
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/images/footprints.png",
                        }
                      }
                    />
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#505256",
                          },
                          Object {
                            "fontFamily": "AmaticSC-Bold",
                          },
                          Object {
                            "color": "#007398",
                            "fontSize": 42,
                            "paddingTop": 10,
                          },
                        ]
                      }
                    >
                      STEPS OF FAITH
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#505256",
                          },
                          Object {
                            "fontFamily": "SourceSansPro-Regular",
                          },
                          Object {
                            "color": "#505256",
                            "fontSize": 16,
                            "paddingHorizontal": 70,
                            "paddingVertical": 10,
                            "textAlign": "center",
                          },
                        ]
                      }
                    >
                      Your Steps of Faith with ben appear here.
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "justifyContent": "flex-end",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityComponentType={undefined}
                    accessibilityLabel={undefined}
                    accessibilityTraits="button"
                    accessible={true}
                    collapsable={undefined}
                    hitSlop={undefined}
                    isTVSelectable={true}
                    nativeID={undefined}
                    onLayout={undefined}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID={undefined}
                    tvParallaxProperties={undefined}
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#52C5DC",
                            "height": 60,
                            "justifyContent": "center",
                          },
                          null,
                          Object {},
                          null,
                        ]
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                            },
                            Object {
                              "fontFamily": "SourceSansPro-Regular",
                            },
                            Array [
                              Object {
                                "backgroundColor": "rgba(0,0,0,0)",
                                "color": "#ffffff",
                                "fontSize": 18,
                                "fontWeight": "500",
                                "letterSpacing": 1.5,
                                "textAlign": "center",
                              },
                              Object {},
                            ],
                          ]
                        }
                      >
                        ADD A STEP OF FAITH
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "width": 750,
              }
            }
          >
            <View
              tabLabel={undefined}
            />
          </View>
          <View
            style={
              Object {
                "width": 750,
              }
            }
          >
            <View
              tabLabel={undefined}
            />
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`renders jean 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
      },
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#ffffff",
          "fontSize": 24,
        },
      ]
    }
  >
    BEN
  </Text>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits="button"
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 0,
            "borderWidth": 0,
            "height": 60,
            "justifyContent": "center",
            "margin": 0,
            "paddingHorizontal": 20,
            "paddingVertical": 10,
          },
          null,
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderRadius": 50,
              "justifyContent": "center",
              "marginRight": 10,
              "paddingHorizontal": 15,
              "paddingVertical": 5,
            },
            null,
            Object {
              "backgroundColor": "#FF5532",
              "height": 36,
              "margin": 10,
              "marginBottom": 5,
            },
          ],
          null,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "backgroundColor": "rgba(0,0,0,0)",
                "color": "#ffffff",
                "fontSize": 18,
                "fontWeight": "500",
                "letterSpacing": 1.5,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#007398",
                },
                null,
                Object {
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "bold",
                },
              ],
            ],
          ]
        }
      >
        SELECT STAGE
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#005A7F",
            "borderRadius": 25,
            "height": 48,
            "margin": 10,
            "width": 48,
          },
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits="button"
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "opacity": 0.6,
              },
              Object {},
              null,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 18,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {
                      "color": "#52C5DC",
                      "fontSize": 24,
                      "opacity": 0.5,
                    },
                  ],
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#005A7F",
            "borderRadius": 25,
            "height": 48,
            "margin": 10,
            "width": 48,
          },
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits="button"
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "opacity": 0.6,
              },
              Object {},
              null,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 18,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {
                      "color": "#52C5DC",
                      "fontSize": 24,
                      "opacity": 0.5,
                    },
                  ],
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#005A7F",
            "borderRadius": 25,
            "height": 48,
            "margin": 10,
            "width": 48,
          },
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits="button"
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "opacity": 0.6,
              },
              Object {},
              null,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 18,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Array [
                      Object {
                        "color": "#52C5DC",
                        "fontSize": 24,
                        "opacity": 0.5,
                      },
                      Object {
                        "fontSize": 20,
                      },
                    ],
                  ],
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignSelf": "stretch",
          "flex": 1,
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "height": 50,
              "marginVertical": 10,
            },
            undefined,
          ]
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingBottom": 0,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 32,
                  },
                  Object {
                    "color": "rgba(255,255,255,1)",
                  },
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontSize": 11,
                    "paddingTop": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255,1)",
                  },
                ],
              ]
            }
          >
            My Steps
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingBottom": 0,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 32,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontSize": 11,
                    "paddingTop": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
              ]
            }
          >
            My Actions
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingBottom": 0,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 32,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontSize": 11,
                    "paddingTop": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
              ]
            }
          >
            Our Journey
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingBottom": 0,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 32,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontSize": 11,
                    "paddingTop": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
              ]
            }
          >
            My Notes
          </Text>
        </View>
      </View>
      <RCTScrollView
        alwaysBounceVertical={false}
        automaticallyAdjustContentInsets={false}
        collapsable={undefined}
        contentOffset={
          Object {
            "x": 0,
          }
        }
        directionalLockEnabled={true}
        horizontal={true}
        keyboardDismissMode="on-drag"
        keyboardShouldPersistTaps="handled"
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        pagingEnabled={true}
        scrollEnabled={false}
        scrollEventThrottle={16}
        scrollsToTop={false}
        showsHorizontalScrollIndicator={false}
      >
        <View>
          <View
            style={
              Object {
                "width": 750,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "white",
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#ffffff",
                        "flex": 1,
                      },
                      Object {
                        "alignItems": "center",
                        "flex": 1,
                        "justifyContent": "center",
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {},
                        Object {
                          "alignItems": "center",
                          "justifyContent": "center",
                        },
                      ]
                    }
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/images/footprints.png",
                        }
                      }
                    />
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#505256",
                          },
                          Object {
                            "fontFamily": "AmaticSC-Bold",
                          },
                          Object {
                            "color": "#007398",
                            "fontSize": 42,
                            "paddingTop": 10,
                          },
                        ]
                      }
                    >
                      STEPS OF FAITH
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#505256",
                          },
                          Object {
                            "fontFamily": "SourceSansPro-Regular",
                          },
                          Object {
                            "color": "#505256",
                            "fontSize": 16,
                            "paddingHorizontal": 70,
                            "paddingVertical": 10,
                            "textAlign": "center",
                          },
                        ]
                      }
                    >
                      Your Steps of Faith with ben appear here.
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "justifyContent": "flex-end",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityComponentType={undefined}
                    accessibilityLabel={undefined}
                    accessibilityTraits="button"
                    accessible={true}
                    collapsable={undefined}
                    hitSlop={undefined}
                    isTVSelectable={true}
                    nativeID={undefined}
                    onLayout={undefined}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID={undefined}
                    tvParallaxProperties={undefined}
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#52C5DC",
                            "height": 60,
                            "justifyContent": "center",
                          },
                          null,
                          Object {},
                          null,
                        ]
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                            },
                            Object {
                              "fontFamily": "SourceSansPro-Regular",
                            },
                            Array [
                              Object {
                                "backgroundColor": "rgba(0,0,0,0)",
                                "color": "#ffffff",
                                "fontSize": 18,
                                "fontWeight": "500",
                                "letterSpacing": 1.5,
                                "textAlign": "center",
                              },
                              Object {},
                            ],
                          ]
                        }
                      >
                        ADD A STEP OF FAITH
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "width": 750,
              }
            }
          >
            <View
              tabLabel={undefined}
            />
          </View>
          <View
            style={
              Object {
                "width": 750,
              }
            }
          >
            <View
              tabLabel={undefined}
            />
          </View>
          <View
            style={
              Object {
                "width": 750,
              }
            }
          >
            <View
              tabLabel={undefined}
            />
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`renders jean with a missionhub user as contact 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
      },
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#ffffff",
          "fontSize": 24,
        },
      ]
    }
  >
    BEN
  </Text>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits="button"
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 0,
            "borderWidth": 0,
            "height": 60,
            "justifyContent": "center",
            "margin": 0,
            "paddingHorizontal": 20,
            "paddingVertical": 10,
          },
          null,
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderRadius": 50,
              "justifyContent": "center",
              "marginRight": 10,
              "paddingHorizontal": 15,
              "paddingVertical": 5,
            },
            null,
            Object {
              "backgroundColor": "#FF5532",
              "height": 36,
              "margin": 10,
              "marginBottom": 5,
            },
          ],
          null,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "backgroundColor": "rgba(0,0,0,0)",
                "color": "#ffffff",
                "fontSize": 18,
                "fontWeight": "500",
                "letterSpacing": 1.5,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#007398",
                },
                null,
                Object {
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "bold",
                },
              ],
            ],
          ]
        }
      >
        SELECT STAGE
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#005A7F",
            "borderRadius": 25,
            "height": 48,
            "margin": 10,
            "width": 48,
          },
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits="button"
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "opacity": 0.6,
              },
              Object {},
              null,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 18,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {
                      "color": "#52C5DC",
                      "fontSize": 24,
                      "opacity": 0.5,
                    },
                  ],
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#005A7F",
            "borderRadius": 25,
            "height": 48,
            "margin": 10,
            "width": 48,
          },
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits="button"
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "opacity": 0.6,
              },
              Object {},
              null,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 18,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {
                      "color": "#52C5DC",
                      "fontSize": 24,
                      "opacity": 0.5,
                    },
                  ],
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#005A7F",
            "borderRadius": 25,
            "height": 48,
            "margin": 10,
            "width": 48,
          },
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits="button"
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "opacity": 0.6,
              },
              Object {},
              null,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 18,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Array [
                      Object {
                        "color": "#52C5DC",
                        "fontSize": 24,
                        "opacity": 0.5,
                      },
                      Object {
                        "fontSize": 20,
                      },
                    ],
                  ],
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignSelf": "stretch",
          "flex": 1,
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "height": 50,
              "marginVertical": 10,
            },
            undefined,
          ]
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingBottom": 0,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 32,
                  },
                  Object {
                    "color": "rgba(255,255,255,1)",
                  },
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontSize": 11,
                    "paddingTop": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255,1)",
                  },
                ],
              ]
            }
          >
            My Steps
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingBottom": 0,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 32,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontSize": 11,
                    "paddingTop": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
              ]
            }
          >
            My Actions
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingBottom": 0,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 32,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontSize": 11,
                    "paddingTop": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
              ]
            }
          >
            Our Journey
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingBottom": 0,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 32,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontSize": 11,
                    "paddingTop": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
              ]
            }
          >
            My Notes
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingBottom": 0,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 32,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontSize": 11,
                    "paddingTop": 3,
                  },
                  Object {
                    "color": "rgba(255,255,255,0.4)",
                  },
                ],
              ]
            }
          >
            Impact
          </Text>
        </View>
      </View>
      <RCTScrollView
        alwaysBounceVertical={false}
        automaticallyAdjustContentInsets={false}
        collapsable={undefined}
        contentOffset={
          Object {
            "x": 0,
          }
        }
        directionalLockEnabled={true}
        horizontal={true}
        keyboardDismissMode="on-drag"
        keyboardShouldPersistTaps="handled"
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        pagingEnabled={true}
        scrollEnabled={false}
        scrollEventThrottle={16}
        scrollsToTop={false}
        showsHorizontalScrollIndicator={false}
      >
        <View>
          <View
            style={
              Object {
                "width": 750,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "white",
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#ffffff",
                        "flex": 1,
                      },
                      Object {
                        "alignItems": "center",
                        "flex": 1,
                        "justifyContent": "center",
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {},
                        Object {
                          "alignItems": "center",
                          "justifyContent": "center",
                        },
                      ]
                    }
                  >
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/images/footprints.png",
                        }
                      }
                    />
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#505256",
                          },
                          Object {
                            "fontFamily": "AmaticSC-Bold",
                          },
                          Object {
                            "color": "#007398",
                            "fontSize": 42,
                            "paddingTop": 10,
                          },
                        ]
                      }
                    >
                      STEPS OF FAITH
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#505256",
                          },
                          Object {
                            "fontFamily": "SourceSansPro-Regular",
                          },
                          Object {
                            "color": "#505256",
                            "fontSize": 16,
                            "paddingHorizontal": 70,
                            "paddingVertical": 10,
                            "textAlign": "center",
                          },
                        ]
                      }
                    >
                      Your Steps of Faith with ben appear here.
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "justifyContent": "flex-end",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityComponentType={undefined}
                    accessibilityLabel={undefined}
                    accessibilityTraits="button"
                    accessible={true}
                    collapsable={undefined}
                    hitSlop={undefined}
                    isTVSelectable={true}
                    nativeID={undefined}
                    onLayout={undefined}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID={undefined}
                    tvParallaxProperties={undefined}
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#52C5DC",
                            "height": 60,
                            "justifyContent": "center",
                          },
                          null,
                          Object {},
                          null,
                        ]
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                            },
                            Object {
                              "fontFamily": "SourceSansPro-Regular",
                            },
                            Array [
                              Object {
                                "backgroundColor": "rgba(0,0,0,0)",
                                "color": "#ffffff",
                                "fontSize": 18,
                                "fontWeight": "500",
                                "letterSpacing": 1.5,
                                "textAlign": "center",
                              },
                              Object {},
                            ],
                          ]
                        }
                      >
                        ADD A STEP OF FAITH
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "width": 750,
              }
            }
          >
            <View
              tabLabel={undefined}
            />
          </View>
          <View
            style={
              Object {
                "width": 750,
              }
            }
          >
            <View
              tabLabel={undefined}
            />
          </View>
          <View
            style={
              Object {
                "width": 750,
              }
            }
          >
            <View
              tabLabel={undefined}
            />
          </View>
          <View
            style={
              Object {
                "width": 750,
              }
            }
          >
            <View
              tabLabel={undefined}
            />
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;
